Intrgrate column search in Pivotable