@@ -25,8 +25,6 @@ package eu.solven.adhoc.measure.transformator;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
 import eu.solven.adhoc.dag.AdhocQueryStep;
 import eu.solven.adhoc.measure.IOperatorsFactory;
@@ -96,13 +94,7 @@ public class ColumnatorQueryStep extends CombinatorQueryStep {
 			IAdhocSliceWithStep slice,
 			ICombination combination,
 			ISliceAndValueConsumer output) {
-		List<Object> underlyingVs = underlyings.stream().map(storage -> {
-			AtomicReference<Object> refV = new AtomicReference<>();
-
-			storage.onValue(slice, refV::set);
-
-			return refV.get();
-		}).collect(Collectors.toList());
+		List<Object> underlyingVs = underlyings.stream().map(u -> ISliceToValue.getValue(u, slice)).toList();
 
 		Object value = combination.combine(slice, underlyingVs);
 
